[project]
name = "youtube-transcript-extractor"
version = "0.1.0"
description = "YouTube transcript extraction using Python requests with 2024-2025 anti-bot handling"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
